# BO4E-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  bo4e_schemas_create_release.py  bo4e_schemas_create_release.sh  docker-compose.yaml  docker-compose.yml  generate_or_validate_json_schemas.py  pyproject.toml  requirements.in  requirements.txt  scrape_the_website.py  setup.cfg  setup.py  stable  tox.ini  uml.py
.github/: dependabot.yml
bo4e/: __init__.py
dev_requirements/: requirements-coverage.in  requirements-coverage.txt  requirements-formatting.in  requirements-formatting.txt  requirements-json_schemas.in  requirements-json_schemas.txt  requirements-linting.in  requirements-linting.txt  requirements-packaging.in  requirements-packaging.txt  requirements-spellcheck.txt  requirements-tests.in  requirements-tests.txt  requirements-type_check.in  requirements-type_check.txt
docs/: Makefile  changelog.rst  conf.py  contributing_guide.rst  index.rst  introduction.rst  release_workflow.rst  requirements.in  requirements.txt  restrictions.rst  test_uml.py  uml.py  versioning.rst
json_schemas/: MarktlokationSchema.json  generate_json_schemas.py  generate_or_validate_json_schemas.py
latest/: .buildinfo  authors.html  changelog.html  contributing_guide.html  fundamentals.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  restrictions.html  search.html  searchindex.js  versioning.html
requirements/: base.in  base.txt  dev.in  dev.txt  docs.in  docs.txt  tests.in  tests.txt
scripts/: generate_docs_assets.py  generate_docs_assets.sh
test-227744/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
test-304506/: .buildinfo  authors.html  changelog.html  contributing_guide.html  fundamentals.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  restrictions.html  search.html  searchindex.js  versioning.html
test-453436/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
test-731186/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
test-779176/: .buildinfo  authors.html  changelog.html  contributing_guide.html  fundamentals.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
tests/: malotest.py  serialization_helper.py  serialization_test_helper.py  test_abweichung.py  test_abweichungsposition.py  test_adresse.py  test_angebot.py  test_angebotsposition.py  test_angebotsteil.py  test_angebotsvariante.py  test_ansprechpartner.py  test_aufabschlag.py  test_aufabschlagproort.py  test_aufabschlagregional.py  test_aufabschlagstaffelproort.py  test_ausschreibung.py  test_ausschreibungsdetail.py  test_ausschreibungslos.py  test_avis.py  test_avisposition.py  test_bankverbindung.py  test_betrag.py  test_bilanzierung.py  test_buendelvertrag.py  test_bypassing_validation.py  test_case_conversions.py  test_doc_utils.py  test_einspeisung.py  test_energieherkunft.py  test_energiemenge.py  test_energiemix.py  test_enums.py  test_erreichbarkeit.py  test_externe_referenz.py  test_fremdkosten.py  test_fremdkostenblock.py  test_fremdkostenposition.py  test_geokoordinaten.py  test_geraet.py  test_geraeteeigenschaften.py  (+89 more)
v202401.0.3/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.1.0/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.1.0-rc2/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.1.1/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.1.1-rc3/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.1.1-rc4/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.1.1-rc6/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.1.2-rc14/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.1.2-rc15/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.2.0/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.2.1/: .buildinfo  authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  release_workflow.html  search.html  searchindex.js  versioning.html
v202401.3.1/: .buildinfo  authors.html  changelog.html  contributing_guide.html  (+10 more)
(+6813 files in other folders)
