[build-system]
requires = ["setuptools>=41.0", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = "tests"
markers = ["datafiles: load datafiles"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
