[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "bo4e"
description = "Python Library that implements the BO4E Standard."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Kevin Krechan", email = "kevin.krechan@hochfrequenz.de" },
  { name = "Leon Haffmans", email = "leon.haffmans@hochfrequenz.de" },
  { name = "Annika Schlögl", email = "annika.schloegl@hochfrequenz.de" },
  { name = "Franziska Vesely", email = "franziska.vesely@hochfrequenz.de" },
  { name = "Konstantin Klein", email = "konstantin.klein@hochfrequenz.de" },
]
keywords = ["bo4e", "bdew", "edi@energy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
# This list must be in synq with the ./requirements.in file!
dependencies = ["iso3166", "pydantic>=2.0.0", "pyhumps"]
dynamic = ["readme", "version"]

[project.urls]
Changelog = "https://github.com/bo4e/bo4e-python/releases"
Homepage = "https://github.com/bo4e/bo4e-python"
Documentation = "https://bo4e-python.readthedocs.io/en/latest/"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [{ path = "README.rst" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_bo4e_python_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.black]
line-length = 120

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = "tests"
markers = ["datafiles: load datafiles"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
