[metadata]
url = https://github.com/Hochfrequenz/BO4E-python
project-urls =
    Documentation = https://bo4e-python.readthedocs.io/en/latest/
    Code = https://github.com/Hochfrequenz/BO4E-python
    Issue tracker = https://github.com/Hochfrequenz/BO4E-python/issues
license = mit
author = Kevin Krechan
author-email = kevin.krechan@hochfrequenz.de
description = Python Library that implements the BO4E Standard.
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    
[options]
zip_safe = False
packages = find:
package_dir = = src
include_package_data = True
python_requires = >=3.8
install_requires = 
    attr
    iso3166
    marshmallow
    marshmallow-enum
    stringcase

[options.packages.find]
where = src
exclude =
    tests

[tool:pytest]
testpaths = tests
