[metadata]
url = https://github.com/Hochfrequenz/BO4E-python
project_urls =
    Documentation = https://bo4e-python.readthedocs.io/en/latest/
    Code = https://github.com/Hochfrequenz/BO4E-python
    Issue tracker = https://github.com/Hochfrequenz/BO4E-python/issues
license = mit
author = Kevin Krechan
author_email = kevin.krechan@hochfrequenz.de
description = Python Library that implements the BO4E Standard.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = find:
package_dir = = src
include_package_data = True
python_requires = >=3.8
install_requires =
    iso3166
    pydantic
    pyhumps
    stringcase

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
* = py.typed
